--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,27 @@ uuid = "a311efd2-96b4-40e8-a1fa-502ca2bf329b"
 authors = ["Martin Kosch <martin.kosch@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+DifferentiableEigen = "73a20539-4e65-4dcb-a56d-dc20f210a01b"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+
 [compat]
+DifferentiableEigen = "0.2.0"
+ForwardDiff = "0.10.38"
+GLMakie = "0.11.3"
+GeometryBasics = "0.5.5"
+LinearAlgebra = "1.11.0"
+PhysicalConstants = "0.2.4"
+Roots = "2.2.6"
+StaticArrays = "1.9.13"
+Unitful = "1.22.0"
 julia = "1.6.7"
 
 [extras]
