--- a/Project.toml
+++ b/Project.toml
@@ -14,19 +14,23 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+Aqua = "0.8"
 ForwardDiff = "0.10.38"
 GLMakie = "0.11.3"
 GeometryBasics = "0.5.5"
 LinearAlgebra = "1.11.0"
 PhysicalConstants = "0.2.4"
 Roots = "2.2.6"
+SafeTestsets = "0.1.0"
 StaticArrays = "1.9.13"
+Test = "1.6"
 Unitful = "1.22.0"
 julia = "1.6.7"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Aqua", "Test"]
+test = ["Aqua", "Test", "SafeTestsets"]
