--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -87,11 +87,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: >
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
             cd docs;
             DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
-            julia --color=yes make.jl
+            julia --project=docs --color=yes make.jl
       - name: Upload site as artifact
         uses: actions/upload-artifact@v4
         with:
