--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -89,6 +89,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: >
+            using Pkg
+            pkg"registry up"
+            Pkg.update()
+            pkg"dev ."
             cd docs;
             DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
             julia --color=yes make.jl
