Added NCPM plot

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -19,6 +20,7 @@ ForwardDiff = "0.10.38"
 GLMakie = "0.11.3"
 GeometryBasics = "0.5.5"
 LinearAlgebra = "1.6.0"
+NearestNeighbors = "0.4.21"
 PhysicalConstants = "0.2.4"
 Roots = "2.2.6"
 SafeTestsets = "0.1.0"
