--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -5,7 +5,9 @@ on:
   workflow_dispatch:
 jobs:
   CompatHelper:
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Pkg.add("CompatHelper")
