--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
@@ -21,6 +22,7 @@ GLMakie = "0.11.3"
 GeometryBasics = "0.5.5"
 LinearAlgebra = "1.6.0"
 PhysicalConstants = "0.2.4"
+Printf = "1.11.0"
 Roots = "2.2.6"
 SafeTestsets = "0.1.0"
 StaticArrays = "1.9.13"
