--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
 Aqua = "0.8"
@@ -29,6 +30,7 @@ StaticArrays = "1.9.13"
 Test = "1.6"
 Tullio = "0.3.8"
 Unitful = "1.22.0"
+YAML = "0.4.14"
 julia = "1.6.7"
 
 [extras]
